2007-10-13  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/hc/src/hc-style.c: (hc_draw_slider), (hc_draw_check):
	Fixed incorrect rounding in hc engine and reworked checkmark
	drawing. (#482542, Josselin Mouette)

2007-10-08  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Added a small comment.

2007-10-08  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	The combobox text colour workaround was broken.

2007-10-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Fix progress bars in menus (eg. network manager). These were broken
	even though the comment above said what needs to be done ...

2007-10-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_entry):
	Fix some comments.

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_set_widget_parameters), (clearlooks_style_draw_shadow):
	Only do the entry state hack if we are drawing an entry, not things
	like spinbutton arrows. (#475629, Diego Escalante Urrelo)

2007-09-23  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_button):
	minor fixes in shadings

2007-09-23  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	* engines/clearlooks/src/clearlooks_types.h:
	Minor fixes to toolbar's shadings.

2007-09-21  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for 2.12.1 release.

2007-09-21  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Crux/gtk-2.0/gtkrc:
	Fix the crux theme by removing the stray new line in the
	color scheme setting.

2007-09-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for 2.12.0 release.

2007-09-10  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Industrial/gtk-2.0/gtkrc:
	Make industrial use the configurable tooltip colors